# rotary-inverted-pendulum

./: .gitignore  README.md
RotaryInvertedPendulum-arduino/LowLevelServer/: LowLevelServer.ino  README.md  StepperUtils.h  client.jl
RotaryInvertedPendulum-arduino/PIDControl/: PIDControl.ino
RotaryInvertedPendulum-arduino/TestEncoder/: TestEncoder.ino
RotaryInvertedPendulum-arduino/TestSerial/: README.md  TestSerial.ino  measure_serial_rtt.jl
RotaryInvertedPendulum-arduino/TestServer/: README.md
RotaryInvertedPendulum-julia/: Project.toml
RotaryInvertedPendulum-python/: README.md  activate.sh  pyproject.toml
RotaryInvertedPendulum-python/src/: gamepad_control.py  pendulum_controller.py
RotaryInvertedPendulum-python/src/rl/: async_control.py  curriculum_train.sh  finetune_async.py  pendulum_env.py  real_env.py  run_policy.py  train_sac.py
RotaryInvertedPendulum-python/test/: gamepad_test.py  serial_test.py
diagrams/: system-without-batteries.drawio
docs/: BOM.md  electronics_design.md  end_to_end_runbook.md  sysid_runbook.md
meshes/: pendulum.dae
urdf/: model.urdf
