[project]
name = "rotary-inverted-pendulum-python"
version = "0.0.0"
description = "Tooling for the rotary inverted pendulum: gamepad control, system identification, and the RL pipeline."
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "scipy",
    "mujoco",
    "gymnasium",
    "stable-baselines3",
    "tensorboard",
    "rich",
    "tqdm",
    "pyserial",
    "pygame",
    "matplotlib",
]

[dependency-groups]
cpu = ["torch>=2.4"]
cuda = ["torch>=2.4"]

[tool.uv]
package = false
default-groups = ["cpu"]
conflicts = [[{ group = "cpu" }, { group = "cuda" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", group = "cpu" },
    { index = "pytorch-cuda", group = "cuda", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
